fix background issue on mobile

--- a/src/main/webapp/WEB-INF/static/style.css
+++ b/src/main/webapp/WEB-INF/static/style.css
@@ -106,3 +106,7 @@ h3 {
 #forecast table {
     width: 100%
 }
+
+#weather-container {
+    background-color: #eee8d5;
+}
